chore: remove non-default `FUNDING.yml`

--- a/package.json
+++ b/package.json
@@ -86,6 +86,5 @@
   "bugs": {
     "url": "https://github.com/mysticatea/regexpp/issues"
   },
-  "homepage": "https://github.com/mysticatea/regexpp#readme",
-  "funding": "https://github.com/sponsors/mysticatea"
+  "homepage": "https://github.com/mysticatea/regexpp#readme"
 }
