--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@types/jsdom": "^12.2.4",
     "@types/mocha": "^5.2.2",
     "@types/node": "^12.6.8",
-    "codecov": "^3.5.0",
     "dts-bundle": "^0.7.3",
     "eslint": "^6.1.0",
     "jsdom": "^15.1.1",
@@ -44,16 +43,14 @@
     "build:rollup": "rollup -c",
     "build:dts": "dts-bundle --name @eslint-community/regexpp --main .temp/index.d.ts --out ../index.d.ts",
     "clean": "rimraf .temp index.*",
-    "codecov": "nyc report -r lcovonly && codecov -t ${CODECOV_TOKEN} --disable=gcov",
-    "lint": "eslint scripts src test --ext .ts",
-    "pretest": "run-s build lint",
+    "lint": "eslint . --ext .ts",
+    "pretest": "npm run build build",
     "test": "nyc _mocha \"test/*.ts\" --reporter dot --timeout 10000",
     "update:test": "ts-node scripts/update-fixtures.ts",
     "update:unicode": "run-s update:unicode:*",
     "update:unicode:ids": "ts-node scripts/update-unicode-ids.ts",
     "update:unicode:props": "ts-node scripts/update-unicode-properties.ts",
-    "preversion": "npm test",
-    "version": "npm run -s build",
+    "preversion": "npm test && npm run -s build",
     "postversion": "git push && git push --tags",
     "prewatch": "npm run -s clean",
     "watch": "_mocha \"test/*.ts\" --require ts-node/register --reporter dot --timeout 10000 --watch-extensions ts --watch --growl"
