--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       🧪 Test (Node@${{ matrix.node }})
     strategy:
       matrix:
-        node: [8.0.0, 8, 10, 12, 14, 16, 18]
+        node: [12.0.0, 12, 14.0.0, 14, 16.0.0, 16, 18.0.0, 18]
     runs-on: ubuntu-latest
     steps:
       - name: 🛑 Cancel Previous Runs
