--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-semantically-released",
   "description": "Regular expression parser for ECMAScript.",
   "engines": {
-    "node": ">=8"
+    "node": "^12.0.0 || ^14.0.0 || ^16.0.0 || >=18.0.0"
   },
   "main": "index",
   "files": [
