--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
   "dependencies": {},
   "devDependencies": {
     "@mysticatea/eslint-plugin": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
     "@types/eslint": "^6.8.1",
-    "@types/jsdom": "^12.2.4",
-    "@types/mocha": "^5.2.7",
+    "@types/jsdom": "^16.2.15",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^12.20.55",
     "dts-bundle": "^0.7.3",
     "eslint": "^6.8.0",
-    "jsdom": "^15.2.1",
-    "mocha": "^6.2.3",
+    "jsdom": "^19.0.0",
+    "mocha": "^9.2.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "rimraf": "^3.0.2",
-    "rollup": "^1.32.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup": "^2.79.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
-    "ts-node": "^8.10.2",
+    "ts-node": "^10.9.1",
     "typescript": "^3.9.10"
   },
   "scripts": {
