--- a/package.json
+++ b/package.json
@@ -2,19 +2,64 @@
   "name": "@eslint-community/regexpp",
   "version": "0.0.0-semantically-released",
   "description": "Regular expression parser for ECMAScript.",
-  "engines": {
-    "node": "^12.0.0 || ^14.0.0 || ^16.0.0 || >=18.0.0"
-  },
-  "main": "index",
-  "files": [
-    "index.*"
+  "keywords": [
+    "regexp",
+    "regular",
+    "expression",
+    "parser",
+    "validator",
+    "ast",
+    "abstract",
+    "syntax",
+    "tree",
+    "ecmascript",
+    "es2015",
+    "es2016",
+    "es2017",
+    "es2018",
+    "es2019",
+    "es2020",
+    "es2021",
+    "annexB"
   ],
+  "homepage": "https://github.com/eslint-community/regexpp#readme",
+  "bugs": {
+    "url": "https://github.com/eslint-community/regexpp/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eslint-community/regexpp"
+  },
+  "license": "MIT",
+  "author": "Toru Nagashima",
   "exports": {
     ".": {
       "import": "./index.mjs",
       "default": "./index.js"
     },
     "./package.json": "./package.json"
+  },
+  "main": "index",
+  "files": [
+    "index.*"
+  ],
+  "scripts": {
+    "prebuild": "npm run -s clean",
+    "build": "run-s build:*",
+    "build:tsc": "tsc --module es2015",
+    "build:rollup": "rollup -c",
+    "build:dts": "dts-bundle --name @eslint-community/regexpp --main .temp/index.d.ts --out ../index.d.ts",
+    "clean": "rimraf .temp index.*",
+    "lint": "eslint . --ext .ts",
+    "test": "nyc _mocha \"test/*.ts\" --reporter dot --timeout 10000",
+    "update:test": "ts-node scripts/update-fixtures.ts",
+    "update:unicode": "run-s update:unicode:*",
+    "update:unicode:ids": "ts-node scripts/update-unicode-ids.ts",
+    "update:unicode:props": "ts-node scripts/update-unicode-properties.ts",
+    "preversion": "npm test && npm run -s build",
+    "postversion": "git push && git push --tags",
+    "prewatch": "npm run -s clean",
+    "watch": "_mocha \"test/*.ts\" --require ts-node/register --reporter dot --timeout 10000 --watch-extensions ts --watch --growl"
   },
   "dependencies": {},
   "devDependencies": {
@@ -36,51 +81,7 @@
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
-  "scripts": {
-    "prebuild": "npm run -s clean",
-    "build": "run-s build:*",
-    "build:tsc": "tsc --module es2015",
-    "build:rollup": "rollup -c",
-    "build:dts": "dts-bundle --name @eslint-community/regexpp --main .temp/index.d.ts --out ../index.d.ts",
-    "clean": "rimraf .temp index.*",
-    "lint": "eslint . --ext .ts",
-    "test": "nyc _mocha \"test/*.ts\" --reporter dot --timeout 10000",
-    "update:test": "ts-node scripts/update-fixtures.ts",
-    "update:unicode": "run-s update:unicode:*",
-    "update:unicode:ids": "ts-node scripts/update-unicode-ids.ts",
-    "update:unicode:props": "ts-node scripts/update-unicode-properties.ts",
-    "preversion": "npm test && npm run -s build",
-    "postversion": "git push && git push --tags",
-    "prewatch": "npm run -s clean",
-    "watch": "_mocha \"test/*.ts\" --require ts-node/register --reporter dot --timeout 10000 --watch-extensions ts --watch --growl"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/eslint-community/regexpp"
-  },
-  "keywords": [
-    "regexp",
-    "regular",
-    "expression",
-    "parser",
-    "validator",
-    "ast",
-    "abstract",
-    "syntax",
-    "tree",
-    "ecmascript",
-    "es2015",
-    "es2016",
-    "es2017",
-    "es2018",
-    "es2019",
-    "es2020",
-    "annexB"
-  ],
-  "author": "Toru Nagashima",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/eslint-community/regexpp/issues"
-  },
-  "homepage": "https://github.com/eslint-community/regexpp#readme"
+  "engines": {
+    "node": "^12.0.0 || ^14.0.0 || ^16.0.0 || >=18.0.0"
+  }
 }
