--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,10 @@ jobs:
         run: npm run lint
 
   test:
-    name:
-      🧪 Test (Node@${{ matrix.node }})
+    name: 🧪 Test (Node@${{ matrix.node }})
     strategy:
       matrix:
-        node: [12.0.0, 12, 14.0.0, 14, 16.0.0, 16, 18.0.0, 18]
+        node: [12.0.0, 12, 14.0.0, 14, 16.0.0, 16, 18.0.0, 18, 19]
     runs-on: ubuntu-latest
     steps:
       - name: 🛑 Cancel Previous Runs
