chore: enable `skipLibCheck` in `tsconfig.json` (#48)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
-        "target": "es2015"
+        "target": "es2015",
+        "skipLibCheck": true
     },
     "include": [
         "src/**/*.ts"
