fix: add `types` condition to the front of the `exports` (#85)

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "Toru Nagashima",
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "import": "./index.mjs",
       "default": "./index.js"
     },
